--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,7 +14,7 @@ repos:
   - id: mypy
     files: pyonlinesvr
 - repo: https://github.com/psf/black
-  rev: 21.5b1
+  rev: 24.1.0
   hooks:
   - id: black
 - repo: https://github.com/pycqa/flake8
