--- a/.github/workflows/conda-python-test.yml
+++ b/.github/workflows/conda-python-test.yml
@@ -32,11 +32,11 @@ jobs:
     - name: Install Linux build dependencies
       if: matrix.os == 'ubuntu-latest'
       run: |
-        conda install -y swig gcc_linux-64 gxx_linux-64 libxcrypt
+        conda install -y --channel=conda-forge swig gcc_linux-64 gxx_linux-64 libxcrypt
     - name: Install MacOS build dependencies
       if: matrix.os == 'macOS-latest'
       run: |
-        conda install -y swig clang_osx-64 clangxx_osx-64 libxcrypt
+        conda install -y --channel=conda-forge swig clang_osx-64 clangxx_osx-64 libxcrypt
     - name: Install Windows build dependencies
       if: matrix.os == 'windows-latest'
       run: |
