--- a/.github/workflows/conda-python-test.yml
+++ b/.github/workflows/conda-python-test.yml
@@ -56,7 +56,7 @@ jobs:
         swig -version
     - name: Build extension and generate source files
       run: |
-        python setup.py build_ext --inplace
+        CPATH=/opt/conda/include/ python setup.py build_ext --inplace
     - name: Lint with flake8
       run: |
         flake8 pyonlinesvr tests --count --show-source --statistics
