--- a/.github/workflows/conda-python-test.yml
+++ b/.github/workflows/conda-python-test.yml
@@ -56,7 +56,7 @@ jobs:
         swig -version
     - name: Build extension and generate source files
       run: |
-        CPATH=/usr/share/miniconda/envs/test/include/ python setup.py build_ext --inplace
+        CPATH=/usr/share/miniconda/envs/test/include/ LD_LIBRARY_PATH=/usr/share/miniconda/envs/test/lib/ python setup.py build_ext --inplace
     - name: Lint with flake8
       run: |
         flake8 pyonlinesvr tests --count --show-source --statistics
